--- a/.github/workflows/testpipeline.yml
+++ b/.github/workflows/testpipeline.yml
@@ -38,8 +38,7 @@ jobs:
       - name: run unit tests
         run: |
           pip install pytest
-          cd EreklesPackage
-          pytest test.py
+          pytest EreklesPackage/test.py
           echo "Here is the log level on Tests Step ${{ inputs.logLevel }}"
   BuildPackage:
     name: Build the Package
