--- a/.github/workflows/testpipeline.yml
+++ b/.github/workflows/testpipeline.yml
@@ -3,8 +3,8 @@ on:
     branches: [ main ]
 
 jobs:
- buildandpush:
-    name: Builandpush
+  UnitTests:
+    name: Run Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -22,9 +22,10 @@ jobs:
           pip install setuptools
           cd EreklesPackage
           pytest test.py
- BuildPackage:
+  BuildPackage:
    name: Build the  BuildPackage
    runs-on: ubuntu-latest
+   needs: UnitTests
    
    steps:
      - name: Clone
